tests/semantic_analysis/error/struct_condition_error.c

char* swapArray( int a, int b )
{
    struct{
        int a;
    } c;
    if(c){

    }
}